--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* Reset and base styles  */
 @import url("https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
@@ -525,14 +524,14 @@ body {
   gap: 20px;
 }
 .stages-item::before {
-  content: url(./../../img/main/aero.png);
+  content: url(./img/main/aero.png);
   position: absolute;
   right: -69px;
   bottom: 0;
   z-index: 2;
 }
 .stages-item::after {
-  content: url(./../img/main/img-stage-vector.svg);
+  content: url(./img/main/img-stage-vector.svg);
   position: absolute;
   right: -45px;
   bottom: 61px;
@@ -562,9 +561,9 @@ body {
   width: 447px;
 }
 .stages-item li::before {
-  content: counter(item) " "; /* Вот такой внушительный номер */
+  content: counter(item) " ";
   background-color: #fff;
-  border-radius: 60%; /* Заметная округлость формы */
+  border-radius: 60%;
   width: 36px;
   height: 36px;
   display: block;
@@ -577,7 +576,7 @@ body {
   left: 20px;
   top: 20px;
   position: absolute;
-  margin-right: 0.5em; /* Деликатное расстояние между текстом и номером */
+  margin-right: 0.5em;
 }
 @media (max-width: 765px) {
   .stages-item {
@@ -626,7 +625,7 @@ body {
 
 .stage {
   position: relative;
-  background-image: url(./../../img/main/img-stage-fon-2.png);
+  background-image: url(./img/main/img-stage-fon-2.png);
   font-family: "Golos Text", sans-serif;
   font-weight: 500;
   font-size: 20px;
